src/main/antlr/.antlr/DejavuAntlrParser.java
// Generated from c:/Users/Dell/IdeaProjects/nexus-intellij/src/main/antlr/DejavuAntlr.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DejavuAntlrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TEMPLATE_E=1, TEMPLATE_L=2, TEXT_SPACE=3, TEXT_WORD=4, TEXT=5, TEMPLATE_R=6, 
		DOT=7, COMMA=8, OP_NOT=9, OP_ADD=10, OP_SUB=11, KW_EXPORT=12, KW_IMPORT=13, 
		KW_AS=14, KW_IN=15, KW_IF=16, KW_ELSE=17, KW_END=18, KW_FOR=19, KW_MATCH=20, 
		KW_CASE=21, KW_WITH=22, KW_SLOT=23, KW_APPLY=24, KW_BREAK=25, KW_CONTINUE=26, 
		OP_PROPORTION=27, PARENTHESES_L=28, PARENTHESES_R=29, BRACKET_L=30, BRACKET_R=31, 
		BRACE_L=32, BRACE_R=33, GENERIC_L=34, GENERIC_R=35, RAW_ID=36, UNICODE_ID=37, 
		WHITE_SPACE=38, BLOCK_COMMENT=39, ERROR_CHARACTAR=40;
	public static final int
		RULE_program = 0, RULE_statements = 1, RULE_any_text = 2, RULE_ie_template = 3, 
		RULE_define_import = 4, RULE_import_block = 5, RULE_import_item = 6, RULE_define_export = 7, 
		RULE_if_template = 8, RULE_if_then = 9, RULE_else_then = 10, RULE_else_if = 11, 
		RULE_if_end = 12, RULE_for_template = 13, RULE_for_begin = 14, RULE_for_pattern = 15, 
		RULE_for_end = 16, RULE_control_template = 17, RULE_control_statement = 18, 
		RULE_slot_statement = 19, RULE_slot_begin = 20, RULE_slot_end = 21, RULE_apply_statement = 22, 
		RULE_apply_begin = 23, RULE_apply_end = 24, RULE_match_statement = 25, 
		RULE_match_begin = 26, RULE_case_branch = 27, RULE_match_end = 28, RULE_any_expression = 29, 
		RULE_expression = 30, RULE_term = 31, RULE_atom = 32, RULE_prefix = 33, 
		RULE_infix = 34, RULE_suffix = 35, RULE_dot_call = 36, RULE_call_term = 37, 
		RULE_modifiers = 38, RULE_modified_identifier = 39, RULE_modified_namepath = 40, 
		RULE_namepath_free = 41, RULE_namepath = 42, RULE_identifier = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statements", "any_text", "ie_template", "define_import", 
			"import_block", "import_item", "define_export", "if_template", "if_then", 
			"else_then", "else_if", "if_end", "for_template", "for_begin", "for_pattern", 
			"for_end", "control_template", "control_statement", "slot_statement", 
			"slot_begin", "slot_end", "apply_statement", "apply_begin", "apply_end", 
			"match_statement", "match_begin", "case_branch", "match_end", "any_expression", 
			"expression", "term", "atom", "prefix", "infix", "suffix", "dot_call", 
			"call_term", "modifiers", "modified_identifier", "modified_namepath", 
			"namepath_free", "namepath", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<%!'", null, null, null, null, null, "'.'", "','", "'!'", "'+'", 
			"'-'", "'export'", "'import'", "'as'", "'in'", "'if'", "'else'", "'end'", 
			"'for'", "'match'", "'case'", "'with'", "'block'", "'apply'", "'break'", 
			"'continue'", "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'\\u27E8'", 
			"'\\u27E9'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TEMPLATE_E", "TEMPLATE_L", "TEXT_SPACE", "TEXT_WORD", "TEXT", 
			"TEMPLATE_R", "DOT", "COMMA", "OP_NOT", "OP_ADD", "OP_SUB", "KW_EXPORT", 
			"KW_IMPORT", "KW_AS", "KW_IN", "KW_IF", "KW_ELSE", "KW_END", "KW_FOR", 
			"KW_MATCH", "KW_CASE", "KW_WITH", "KW_SLOT", "KW_APPLY", "KW_BREAK", 
			"KW_CONTINUE", "OP_PROPORTION", "PARENTHESES_L", "PARENTHESES_R", "BRACKET_L", 
			"BRACKET_R", "BRACE_L", "BRACE_R", "GENERIC_L", "GENERIC_R", "RAW_ID", 
			"UNICODE_ID", "WHITE_SPACE", "BLOCK_COMMENT", "ERROR_CHARACTAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DejavuAntlr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DejavuAntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DejavuAntlrParser.EOF, 0); }
		public List<TerminalNode> TEMPLATE_E() { return getTokens(DejavuAntlrParser.TEMPLATE_E); }
		public TerminalNode TEMPLATE_E(int i) {
			return getToken(DejavuAntlrParser.TEMPLATE_E, i);
		}
		public List<Ie_templateContext> ie_template() {
			return getRuleContexts(Ie_templateContext.class);
		}
		public Ie_templateContext ie_template(int i) {
			return getRuleContext(Ie_templateContext.class,i);
		}
		public List<If_templateContext> if_template() {
			return getRuleContexts(If_templateContext.class);
		}
		public If_templateContext if_template(int i) {
			return getRuleContext(If_templateContext.class,i);
		}
		public List<For_templateContext> for_template() {
			return getRuleContexts(For_templateContext.class);
		}
		public For_templateContext for_template(int i) {
			return getRuleContext(For_templateContext.class,i);
		}
		public List<Slot_statementContext> slot_statement() {
			return getRuleContexts(Slot_statementContext.class);
		}
		public Slot_statementContext slot_statement(int i) {
			return getRuleContext(Slot_statementContext.class,i);
		}
		public List<Apply_statementContext> apply_statement() {
			return getRuleContexts(Apply_statementContext.class);
		}
		public Apply_statementContext apply_statement(int i) {
			return getRuleContext(Apply_statementContext.class,i);
		}
		public List<Match_statementContext> match_statement() {
			return getRuleContexts(Match_statementContext.class);
		}
		public Match_statementContext match_statement(int i) {
			return getRuleContext(Match_statementContext.class,i);
		}
		public List<Any_expressionContext> any_expression() {
			return getRuleContexts(Any_expressionContext.class);
		}
		public Any_expressionContext any_expression(int i) {
			return getRuleContext(Any_expressionContext.class,i);
		}
		public List<Any_textContext> any_text() {
			return getRuleContexts(Any_textContext.class);
		}
		public Any_textContext any_text(int i) {
			return getRuleContext(Any_textContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 62L) != 0)) {
				{
				setState(97);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(88);
					match(TEMPLATE_E);
					}
					break;
				case 2:
					{
					setState(89);
					ie_template();
					}
					break;
				case 3:
					{
					setState(90);
					if_template();
					}
					break;
				case 4:
					{
					setState(91);
					for_template();
					}
					break;
				case 5:
					{
					setState(92);
					slot_statement();
					}
					break;
				case 6:
					{
					setState(93);
					apply_statement();
					}
					break;
				case 7:
					{
					setState(94);
					match_statement();
					}
					break;
				case 8:
					{
					setState(95);
					any_expression();
					}
					break;
				case 9:
					{
					setState(96);
					any_text();
					}
					break;
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public If_templateContext if_template() {
			return getRuleContext(If_templateContext.class,0);
		}
		public For_templateContext for_template() {
			return getRuleContext(For_templateContext.class,0);
		}
		public Control_templateContext control_template() {
			return getRuleContext(Control_templateContext.class,0);
		}
		public Any_textContext any_text() {
			return getRuleContext(Any_textContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				if_template();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				for_template();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				control_template();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				any_text();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Any_textContext extends ParserRuleContext {
		public TerminalNode TEXT_SPACE() { return getToken(DejavuAntlrParser.TEXT_SPACE, 0); }
		public TerminalNode TEXT_WORD() { return getToken(DejavuAntlrParser.TEXT_WORD, 0); }
		public TerminalNode TEXT() { return getToken(DejavuAntlrParser.TEXT, 0); }
		public Any_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_any_text; }
	}

	public final Any_textContext any_text() throws RecognitionException {
		Any_textContext _localctx = new Any_textContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_any_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 56L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ie_templateContext extends ParserRuleContext {
		public TerminalNode TEMPLATE_L() { return getToken(DejavuAntlrParser.TEMPLATE_L, 0); }
		public TerminalNode TEMPLATE_R() { return getToken(DejavuAntlrParser.TEMPLATE_R, 0); }
		public List<Define_importContext> define_import() {
			return getRuleContexts(Define_importContext.class);
		}
		public Define_importContext define_import(int i) {
			return getRuleContext(Define_importContext.class,i);
		}
		public List<Define_exportContext> define_export() {
			return getRuleContexts(Define_exportContext.class);
		}
		public Define_exportContext define_export(int i) {
			return getRuleContext(Define_exportContext.class,i);
		}
		public Ie_templateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ie_template; }
	}

	public final Ie_templateContext ie_template() throws RecognitionException {
		Ie_templateContext _localctx = new Ie_templateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ie_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(TEMPLATE_L);
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_IMPORT:
					{
					setState(113);
					define_import();
					}
					break;
				case KW_EXPORT:
					{
					setState(114);
					define_export();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KW_EXPORT || _la==KW_IMPORT );
			setState(119);
			match(TEMPLATE_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_importContext extends ParserRuleContext {
		public TerminalNode KW_IMPORT() { return getToken(DejavuAntlrParser.KW_IMPORT, 0); }
		public Import_blockContext import_block() {
			return getRuleContext(Import_blockContext.class,0);
		}
		public TerminalNode KW_WITH() { return getToken(DejavuAntlrParser.KW_WITH, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Define_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_import; }
	}

	public final Define_importContext define_import() throws RecognitionException {
		Define_importContext _localctx = new Define_importContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_define_import);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(KW_IMPORT);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_WITH) {
				{
				setState(122);
				match(KW_WITH);
				setState(123);
				identifier();
				}
			}

			setState(126);
			import_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_blockContext extends ParserRuleContext {
		public TerminalNode BRACE_L() { return getToken(DejavuAntlrParser.BRACE_L, 0); }
		public TerminalNode BRACE_R() { return getToken(DejavuAntlrParser.BRACE_R, 0); }
		public List<Import_itemContext> import_item() {
			return getRuleContexts(Import_itemContext.class);
		}
		public Import_itemContext import_item(int i) {
			return getRuleContext(Import_itemContext.class,i);
		}
		public Import_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_block; }
	}

	public final Import_blockContext import_block() throws RecognitionException {
		Import_blockContext _localctx = new Import_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_import_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(BRACE_L);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RAW_ID || _la==UNICODE_ID) {
				{
				{
				setState(129);
				import_item();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(BRACE_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_itemContext extends ParserRuleContext {
		public Namepath_freeContext namepath_free() {
			return getRuleContext(Namepath_freeContext.class,0);
		}
		public TerminalNode KW_AS() { return getToken(DejavuAntlrParser.KW_AS, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Import_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_item; }
	}

	public final Import_itemContext import_item() throws RecognitionException {
		Import_itemContext _localctx = new Import_itemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_import_item);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			namepath_free();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_AS) {
				{
				setState(138);
				match(KW_AS);
				setState(139);
				identifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_exportContext extends ParserRuleContext {
		public TerminalNode KW_EXPORT() { return getToken(DejavuAntlrParser.KW_EXPORT, 0); }
		public List<Namepath_freeContext> namepath_free() {
			return getRuleContexts(Namepath_freeContext.class);
		}
		public Namepath_freeContext namepath_free(int i) {
			return getRuleContext(Namepath_freeContext.class,i);
		}
		public TerminalNode KW_WITH() { return getToken(DejavuAntlrParser.KW_WITH, 0); }
		public Define_exportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_export; }
	}

	public final Define_exportContext define_export() throws RecognitionException {
		Define_exportContext _localctx = new Define_exportContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_define_export);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(KW_EXPORT);
			setState(143);
			namepath_free();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_WITH) {
				{
				setState(144);
				match(KW_WITH);
				setState(145);
				namepath_free();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_templateContext extends ParserRuleContext {
		public If_thenContext if_then() {
			return getRuleContext(If_thenContext.class,0);
		}
		public If_endContext if_end() {
			return getRuleContext(If_endContext.class,0);
		}
		public List<Else_ifContext> else_if() {
			return getRuleContexts(Else_ifContext.class);
		}
		public Else_ifContext else_if(int i) {
			return getRuleContext(Else_ifContext.class,i);
		}
		public Else_thenContext else_then() {
			return getRuleContext(Else_thenContext.class,0);
		}
		public If_templateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_template; }
	}

	public final If_templateContext if_template() throws RecognitionException {
		If_templateContext _localctx = new If_templateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_if_template);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			if_then();
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149);
					else_if();
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(155);
				else_then();
				}
				break;
			}
			setState(158);
			if_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_thenContext extends ParserRuleContext {
		public TerminalNode TEMPLATE_L() { return getToken(DejavuAntlrParser.TEMPLATE_L, 0); }
		public TerminalNode KW_IF() { return getToken(DejavuAntlrParser.KW_IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode TEMPLATE_R() { return getToken(DejavuAntlrParser.TEMPLATE_R, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public If_thenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_then; }
	}

	public final If_thenContext if_then() throws RecognitionException {
		If_thenContext _localctx = new If_thenContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_if_then);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(TEMPLATE_L);
			setState(161);
			match(KW_IF);
			setState(162);
			expression();
			setState(163);
			match(TEMPLATE_R);
			setState(167);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(164);
					statements();
					}
					} 
				}
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Else_thenContext extends ParserRuleContext {
		public TerminalNode TEMPLATE_L() { return getToken(DejavuAntlrParser.TEMPLATE_L, 0); }
		public TerminalNode KW_ELSE() { return getToken(DejavuAntlrParser.KW_ELSE, 0); }
		public TerminalNode TEMPLATE_R() { return getToken(DejavuAntlrParser.TEMPLATE_R, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public Else_thenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_then; }
	}

	public final Else_thenContext else_then() throws RecognitionException {
		Else_thenContext _localctx = new Else_thenContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_else_then);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(TEMPLATE_L);
			setState(171);
			match(KW_ELSE);
			setState(172);
			match(TEMPLATE_R);
			setState(176);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(173);
					statements();
					}
					} 
				}
				setState(178);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Else_ifContext extends ParserRuleContext {
		public TerminalNode TEMPLATE_L() { return getToken(DejavuAntlrParser.TEMPLATE_L, 0); }
		public TerminalNode KW_ELSE() { return getToken(DejavuAntlrParser.KW_ELSE, 0); }
		public TerminalNode KW_IF() { return getToken(DejavuAntlrParser.KW_IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode TEMPLATE_R() { return getToken(DejavuAntlrParser.TEMPLATE_R, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public Else_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_if; }
	}

	public final Else_ifContext else_if() throws RecognitionException {
		Else_ifContext _localctx = new Else_ifContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_else_if);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(TEMPLATE_L);
			setState(180);
			match(KW_ELSE);
			setState(181);
			match(KW_IF);
			setState(182);
			expression();
			setState(183);
			match(TEMPLATE_R);
			setState(187);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(184);
					statements();
					}
					} 
				}
				setState(189);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_endContext extends ParserRuleContext {
		public TerminalNode TEMPLATE_L() { return getToken(DejavuAntlrParser.TEMPLATE_L, 0); }
		public TerminalNode KW_END() { return getToken(DejavuAntlrParser.KW_END, 0); }
		public TerminalNode TEMPLATE_R() { return getToken(DejavuAntlrParser.TEMPLATE_R, 0); }
		public TerminalNode KW_IF() { return getToken(DejavuAntlrParser.KW_IF, 0); }
		public If_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_end; }
	}

	public final If_endContext if_end() throws RecognitionException {
		If_endContext _localctx = new If_endContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_if_end);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(TEMPLATE_L);
			setState(191);
			match(KW_END);
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_IF) {
				{
				setState(192);
				match(KW_IF);
				}
			}

			setState(195);
			match(TEMPLATE_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class For_templateContext extends ParserRuleContext {
		public For_beginContext for_begin() {
			return getRuleContext(For_beginContext.class,0);
		}
		public For_endContext for_end() {
			return getRuleContext(For_endContext.class,0);
		}
		public Else_thenContext else_then() {
			return getRuleContext(Else_thenContext.class,0);
		}
		public For_templateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_template; }
	}
